# SplitLohmann

./: .gitattributes  .gitignore  LICENSE  README.md  runsim.m
compute_static_python/: README.md  compute.py
compute_stream_cpp/: CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  README.md
compute_stream_cpp/shaders/: depth_fragment.glsl
compute_stream_cpp/src/: main.c  matrix_gtav.c  util.c  util.h  video_reader.cpp
compute_stream_cpp_v2/: CMakeLists.txt  Makefile
compute_stream_cpp_v2/homography/: left_color.txt  left_depth.txt  right_color.txt  right_depth.txt
compute_stream_cpp_v2/shaders/: block_vertex.glsl  color_fragment.glsl  depth_fragment.glsl  depth_vertex.glsl  line_vertex.glsl
compute_stream_cpp_v2/src/: craft.c  craft.h  main.cpp  matrix.c
compute_to_display/: README.md  compute.py  params.py
compute_to_display/data/: HomographyMatrixOLED2SLM.npy
functions/: compile_gif.m  define_params.m  interp_for_camera.m  lens_fourier_propagate.m  load_scene.m  print_specs.m  render.m  simulation.m
hardware/: README.md
hardware/compute_stream_cpp/: README.md  modify_blocks.py
hardware/compute_stream_cpp/shaders/: color_fragment.glsl  color_vertex.glsl
hardware/compute_stream_cpp/src/: util_gtav.c
scenes/mat/: CastleCity.mat
